# seqrule

./: .coveragerc  .gitignore  CHANGELOG.md  LICENSE  NORTHSTAR.md  README.md  project_structure  pyproject.toml  requirements.txt
.github/workflows/: coverage.yml  lint.yml  python-checks.yml  test.yml  uv-test.yml
docs/general/built_in_rule_analyses/: analysis_report.md  rule_analysis.json
examples/: 01_dna_validation.py  02_chess_moves.py  03_chord_progressions.py  04_eleusis_rules.py  05_turkish_phonology.py  06_recipe_api.py
sequence_rules/core/: evaluator.py
sequence_rules/dsl/: SequenceRule.g4  SequenceRuleLexer.py  SequenceRuleListener.py  SequenceRuleParser.py  SequenceRuleVisitor.py  ast.py  parser.py
src/seqrule/: __init__.py  analyses.py  api.py  constraints.py  evaluators.py  generators.py  logging_config.py  objects.py
tests/: conftest.py  test_analyses.py  test_api_coverage.py  test_api_endpoints.py  test_api_error_handling.py  test_api_models.py  test_api_validation.py  test_constraints.py  test_evaluator.py  test_evaluators.py  test_generators.py  test_logging_config.py  test_objects.py  test_parser.py
