[project]
name = "sequence-rules"
version = "0.0.1"
description = "A robust framework for sequence rule generation and evaluation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "antlr4-python3-runtime",  # For DSL parsing
    "sympy",                   # For rule normalization
    "networkx",                # For automata/FSM
    "z3-solver",              # For constraint solving
    "scikit-learn",           # For heuristics and scoring
    "pyswip",                 # Python-Prolog bridge
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=6.0.0",
    "black",
    "isort",
    "mypy",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
select = ["E", "F", "B", "I"]
line-length = 100

[tool.black]
line-length = 100

[tool.pytest.ini_options]
addopts = "--cov=sequence_rules --cov-report=term-missing"
testpaths = ["tests"]
